[package]
name = "geocog"
version = "0.1.0"
edition = "2024"
description = "Pure Rust COG (Cloud Optimized GeoTIFF) reader library"
license = "MIT"
readme = "README.md"
keywords = ["cog", "geotiff", "tiff", "raster", "geo"]
categories = ["science::geo", "encoding"]

[lib]
name = "geocog"
path = "src/lib.rs"

[dependencies]
# TIFF/image parsing
tiff = { version = "0.10.3", features = ["lzw", "deflate"], default-features = false }
image = "0.25.6"

# Compression
weezl = "0.1.10"
flate2 = "1.0"
zstd = "0.13"

# Coordinate transforms
geo = "0.29.0"
proj = "0.30.0"

# Data structures
ndarray = "0.16.1"
bytes = "1.5.0"
lru = "0.12"

# Async/storage
tokio = { version = "1.44.2", features = ["rt", "fs"] }
object_store = { version = "0.12.3", features = ["http", "aws"] }
reqwest = { version = "0.12", features = ["blocking"] }
futures = "0.3"

# Error handling and utilities
anyhow = "1.0.98"
thiserror = "2.0"
tracing = "0.1"
once_cell = "1.19.0"
url = "2.5.7"

[features]
default = []
# Enable S3 support
s3 = []

[dev-dependencies]
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full", "test-util"] }
rand = "0.9"
